# ai-service-platform

./: .coveragerc  .dockerignore  .gitignore  .prettierrc  Dockerfile  Pipfile  README.md  compose.yaml  input.css  pyproject.toml  requirements.txt  tailwind.config.js
.github/workflows/: deploy-image.yaml
ai_service_platform/: __init__.py
ai_service_platform/apis/: auth.py  model.py  request.py  source.py  user.py
ai_service_platform/core/: models.py  request_handler.py
ai_service_platform/models/: models.py  request_handler.py
ai_service_platform/static/: custom.css  output.css
ai_service_platform/templates/: base.html  components.html  index.html  models.html  users.html
ai_service_platform/templates/auth/: login.html  register.html
ai_service_platform/templates/request/: item.html  list.html  request_table.html  table_status.html
ai_service_platform/views/: auth.py  model.py  request.py  source.py  user.py
backend/: __init__.py
backend/apis/: __init__.py  auth.py  model.py  request.py  source.py  user.py
backend/core/: request_handler.py
tests/: conftest.py  test_auth.py  test_model.py  test_request.py  test_request_handler.py  test_source.py  test_user.py
