[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask-smorest>=0.45.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "keras>=3.7.0",
    "pillow>=11.0.0",
    "pyjwt>=2.10.1",
    "marshmallow-sqlalchemy>=1.1.0",
    "marshmallow-enum>=1.5.1",
    "flask-marshmallow>=1.2.1",
    "tensorflow-cpu>=2.18.0",
]

[dependency-groups]
dev = [
    "coverage>=7.6.8",
    "pytest>=8.3.4",
]

[build-system]
requires = ['hatchling']
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ['backend']

[tool.pytest.ini_options]
addopts = [
    "--import-mode=importlib",
]
